# YATSEE

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  yatsee.conf  yatsee_config_builder.py  yatsee_download_audio.py  yatsee_download_audio.sh  yatsee_format_audio.py  yatsee_format_audio.sh  yatsee_index_data.py  yatsee_normalize_structure.py  yatsee_polish_transcript.py  yatsee_search_demo.py  yatsee_slice_vtt.py  yatsee_sound_recorder.py  yatsee_summarize_transcripts.py  yatsee_transcribe_audio.py  yatsee_vtt_to_txt.sh
docs/: yatsee_config_guide.md  yatsee_overview.md  yatsee_prompt_orchestration.md  yatsee_troubleshooting.md  yatsee_user_guide.md
prompts/civic/: prompts.toml
prompts/research/: prompts.toml
prompts/summary/: prompts.toml
scripts/: setup.ps1  setup.sh
src/yatsee/: __init__.py
src/yatsee/audio/: __init__.py  ffmpeg.py  format.py  transcribe.py
src/yatsee/cli/: __init__.py  main.py
src/yatsee/config_tools/: __init__.py  entity.py  resolve.py  scaffold.py  validate.py
src/yatsee/core/: __init__.py  config.py  discovery.py  errors.py  hashing.py  logging.py  paths.py  tracking.py
src/yatsee/intel/: __init__.py  chunking.py  classifier.py  llm.py  prompts.py  resolve.py  runner.py  speakers.py  summary.py  writers.py
src/yatsee/providers/: __init__.py  anthropic.py  base.py  codex_cli.py  llamacpp.py  ollama.py  openai.py  pricing.py  registry.py  security.py  tokenization.py
src/yatsee/source/: __init__.py  fetch.py  youtube.py
src/yatsee/transcript/: __init__.py  normalize.py  slice.py
